--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -29,8 +29,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b60c9855",
+   "metadata": {},
+   "source": [
+    "* Started the MongoDB Server\n",
+    "* Imported ./Resources/establishments.json into mongo using mongoimport command:\n",
+    "\n",
+    "mongoimport --db uk_food --collection establishments --file ./Resources/establishments.json --jsonArray"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,17 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7f9ececa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['admin', 'config', 'local', 'uk_food']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "databases = mongo.list_database_names()\n",
+    "databases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -74,43 +98,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ef1b89ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "collections = db.list_collection_names()\n",
+    "collections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review the collections in our new database\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a0d92df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review a document in the establishments collection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# assign the collection to a variable\n",
     "establishments = db['establishments']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ba5c00bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': '1 The Droveway',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'FirstLight Bar & Café',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.64041272672,\n",
+      " 'FHRSID': 1290215,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000083029',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT15 6DH',\n",
+      " 'RatingDate': '2020-11-09T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66f8b35efa6ebc515720ca87'),\n",
+      " 'geocode': {'latitude': '51.150625', 'longitude': '1.378231'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1290215',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# review a document in the establishments collection\n",
+    "# Find and display one document in the establishments collection using find_one and display with pprint\n",
+    "first_document = establishments.find_one()\n",
+    "pprint(first_document)\n"
    ]
   },
   {
@@ -339,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
